apps/argocd/base/gateway/gateway.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    argocd.argoproj.io/sync-options: Force=true,Replace=true
spec:
  gatewayClassName: cilium
  listeners:
  - name: argocd
    hostname: argocd.seigra.net
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - name: argocd-gateway-tls
      mode: Terminate
