apps/argocd/base/gateway/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
spec:
  hostnames:
  - argocd.seigra.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: argocd
    sectionName: argocd
  rules:
  - backendRefs:
    - kind: Service
      name: argocd-server
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
